@@ -1,6 +1,7 @@
 0.9.53
 - Options to disable/enable language/country/codec tags
 - Remove IconWall from AEL
+- Fix for busy spinner visibility
 
 0.9.52
 - Fix for busy spinner on home screen
